MDEV-8901: InnoDB: Punch hole is incorrecty done also to log files causing assertion and database corruption