storage/xtradb/fil/fil0fil.cc
@@ -5253,7 +5253,7 @@ retry:
 		success = os_file_write(node->name, node->handle, buf,
 					offset, page_size * n_pages);
 #else
-		success = os_aio(OS_FILE_WRITE, OS_AIO_SYNC,
+		success = os_aio(OS_FILE_WRITE, 0, OS_AIO_SYNC,
 				 node->name, node->handle, buf,
 				 offset, page_size * n_pages,
 				 node, NULL, space_id, NULL, 0);
@@ -5918,6 +5918,7 @@ _fil_io(
 	/* Queue the aio request */
 	ret = os_aio(
 		type,
+		is_log,
 		mode | wake_later,
 		node->name,
 		node->handle,
