storage/xtradb/include/os0file.h
@@ -321,10 +321,10 @@ The wrapper functions have the prefix of "innodb_". */
 # define os_file_close(file)						\
 	pfs_os_file_close_func(file, __FILE__, __LINE__)
 
-# define os_aio(type, mode, name, file, buf, offset,			\
+# define os_aio(type, is_log, mode, name, file, buf, offset,		\
 	n, message1, message2, space_id, 				\
 	trx, write_size) 					 	\
-	pfs_os_aio_func(type, mode, name, file, buf, offset,		\
+	pfs_os_aio_func(type, is_log, mode, name, file, buf, offset,	\
 		n, message1, message2, space_id, trx, write_size,	\
 		__FILE__, __LINE__)
 
@@ -372,9 +372,9 @@ to original un-instrumented file I/O APIs */
 
 # define os_file_close(file)	os_file_close_func(file)
 
-# define os_aio(type, mode, name, file, buf, offset, n, message1,	\
+# define os_aio(type, is_log, mode, name, file, buf, offset, n, message1, \
 	message2, space_id, trx, write_size)				\
-	os_aio_func(type, mode, name, file, buf, offset, n,		\
+	os_aio_func(type, is_log, mode, name, file, buf, offset, n,	\
 		message1, message2, space_id, trx, write_size)
 
 # define os_file_read(file, buf, offset, n)				\
@@ -772,6 +772,7 @@ ibool
 pfs_os_aio_func(
 /*============*/
 	ulint		type,	/*!< in: OS_FILE_READ or OS_FILE_WRITE */
+	ulint		is_log,	/*!< in: 1 is OS_FILE_LOG or 0 */
 	ulint		mode,	/*!< in: OS_AIO_NORMAL etc. I/O mode */
 	const char*	name,	/*!< in: name of the file or path as a
 				null-terminated string */
@@ -1139,6 +1140,7 @@ ibool
 os_aio_func(
 /*========*/
 	ulint		type,	/*!< in: OS_FILE_READ or OS_FILE_WRITE */
+	ulint		is_log,	/*!< in: 1 is OS_FILE_LOG or 0 */
 	ulint		mode,	/*!< in: OS_AIO_NORMAL, ..., possibly ORed
 				to OS_AIO_SIMULATED_WAKE_LATER: the
 				last flag advises this function not to wake
